# nocturne

./: .gitignore  CLAUDE.md  Makefile  POC_GUIDE.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  pr-check.yml
backend/: .env.example  init_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  audio.py  journeys.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  audio.py  journey.py  segment.py  youtube_integration.py
backend/app/routers/: ai_music.py  youtube_music.py
backend/app/schemas/: ai_music.py  journey.py  segment.py  youtube_music.py
backend/app/services/: ai_music_generator.py  audio_cache.py  audiocraft_service.py  mubert_service.py  youtube_music.py
backend/cache/audio/: cache_metadata.json
backend/scripts/: batch_music_generator.py  long_bgm_generator.py
docs/: TECHNICAL_SPECIFICATION.md
frontend/: .env.example  .eslintrc.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.json  sw.js
frontend/scripts/: generate-icons.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIMusicPlayer.tsx  AuthModal.tsx  BottomNavigation.tsx  JourneyPlayer.tsx  MusicLibraryShelf.tsx  PWAInstall.tsx  PWAProvider.tsx  PlaylistCreateModal.tsx  SettingsModal.tsx  SleepJournalAnalytics.tsx  SleepScoreVisualization.tsx  SleepSessionTracker.tsx  TonightDashboard.tsx  UserProfile.tsx  YouTubeMusicIntegration.tsx
frontend/src/components/ui/: badge.tsx  progress.tsx
frontend/src/contexts/: AuthContext.tsx  SettingsContext.tsx
frontend/src/lib/: api.ts  audio.ts  auth.ts  pwa.ts  settings.ts  utils.ts
frontend/src/services/: youtubeMusicService.ts
